[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/DarkTheme/Dark.theme" type="Theme" id=1]
[ext_resource path="res://Sounds/ImportedSounds/Retro2.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -87.0
margin_right = 96.0
margin_bottom = 150.0

[node name="StartButton" type="Button" parent="MainMenu"]
margin_right = 192.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Continue"

[node name="OptionsButton" type="Button" parent="MainMenu"]
margin_top = 28.0
margin_right = 192.0
margin_bottom = 53.0
focus_neighbour_bottom = NodePath("../QuitButton")
text = "options"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 81.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Panel" type="Panel" parent="."]
margin_left = 787.0
margin_top = 1.0
margin_right = 1020.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="Panel"]
text = "- Press o for skilltree"

[node name="Label2" type="Label" parent="Panel"]
margin_top = 30.0
margin_right = 80.4
margin_bottom = 57.4
text = "- Have fun!"

[node name="Label3" type="Label" parent="Panel"]
margin_top = 60.0
margin_right = 224.4
margin_bottom = 87.4
text = "- Install League of legends!"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Options"]
margin_top = -1.0
margin_right = 200.0
margin_bottom = 26.4
text = "Options"
align = 1

[node name="Label2" type="Label" parent="Options"]
margin_top = 29.0
margin_right = 200.0
margin_bottom = 56.4
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Options"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 73.0
min_value = -30.0
max_value = 0.0

[node name="Label3" type="Label" parent="Options"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 102.4
text = "Voice Pitch"

[node name="VoicePitch" type="HSlider" parent="Options"]
margin_top = 106.0
margin_right = 200.0
margin_bottom = 119.0
min_value = -0.7
max_value = 1.3
step = 0.1

[node name="BackButton" type="Button" parent="Options"]
margin_top = 122.0
margin_right = 200.0
margin_bottom = 147.0
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.174
pitch_scale = 0.5

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="Options/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/VoicePitch" to="." method="_on_VoicePitch_value_changed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_BackButton_pressed"]
